--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,5 @@ Flask-Migrate==4.0.4
 Flask-WTF==1.1.1
 WTForms==3.0.1
 gunicorn==20.1.0
-pymysql==1.0.3  # Nếu dùng MySQL
-psycopg2==2.9.6  # Nếu dùng PostgreSQL
-sqlite==3.38.5  # Nếu dùng SQLite
+pymysql==1.0.3
+psycopg2==2.9.6
